--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,13 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+    max-width: 30%;
+    justify-content: center;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 main {
     display: flex;
     flex-direction: column;
